--- a/web/index.html
+++ b/web/index.html
@@ -19,6 +19,8 @@
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="A logic-less text template workspace">
+  <meta name="google-signin-client_id" content="667846746873-ihji4ehv672p8hqlvffk6nc2av3o5l59.apps.googleusercontent.com">
+  <!-- <meta name="google-signin-client_id" content="YOUR_GOOGLE_SIGN_IN_OAUTH_CLIENT_ID.apps.googleusercontent.com"> -->
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
